Non-functional add previous mammogram form
This page is served at /participants/<uuid>/previous-mammograms/add

For now, show the form, excluding conditional fields. The form is not
yet submittable.

Further changes will also be needed to how we display previous
mammograms.

--- a/manage_breast_screening/participants/jinja2/components/participant-details/template.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/template.jinja
@@ -131,9 +131,9 @@
      "actions": {
         "items": [
           {
-            "href": "#",
-            "text": "View or change",
-            "visuallyHiddenText": "email"
+            "href": presented_mammograms.add_link.href,
+            "text": presented_mammograms.add_link.text,
+            "visuallyHiddenText": presented_mammograms.add_link.visually_hidden_text
           }
         ]
       }
