--- a/manage_breast_screening/core/jinja2/django_form_helpers.jinja
+++ b/manage_breast_screening/core/jinja2/django_form_helpers.jinja
@@ -1,6 +1,7 @@
-{% from 'radios/macro.jinja' import radios as radios_component %}
 {% from "checkboxes/macro.jinja" import checkboxes as checkboxes_component %}
 {% from 'error-summary/macro.jinja' import errorSummary %}
+{% from 'radios/macro.jinja' import radios as radios_component %}
+{% from 'select/macro.jinja' import select as select_component %}
 
 {% macro form_error_summary(form, title="There is a problem") %}
     {% if form.errors %}
@@ -58,4 +59,31 @@
 
 {% macro app_checkboxes(form_attribute, legend=None, hint=None) %}
   {{ _render(form_attribute=form_attribute, legend=legend, hint=hint, component=checkboxes_component) }}
+{% endmacro %}
+
+{% macro app_select(form_attribute, label=None, hint=None) %}
+  {% if form_attribute.errors %}
+    {% set error_message = {"text": form_attribute.errors | first} %}
+  {% endif %}
+  {% set ns = namespace(items=[]) %}
+  {% set choice_field = form_attribute.field %}
+  {% for choice in choice_field.choices %}
+    {% set ns.items = ns.items + [{
+      "id": form_attribute.auto_id if loop.first,
+      "value": choice[0],
+      "text": choice[1],
+      "selected": form_attribute.value() in ["", none] if choice[0] == "" else form_attribute.value() == choice[0],
+      "disabled": choice[0] == ""
+    }] %}
+  {% endfor %}
+  {{ select_component({
+    "name": form_attribute.html_name,
+    "id": form_attribute.auto_id,
+    "label": {"text": form_attribute.label},
+    "errorMessage": error_message,
+    "hint": {
+      "html": hint|e
+    } if hint,
+    "items": ns.items
+  }) }}
 {% endmacro %}
