Display screening protocol on appointment page
- If a screening protocol is provided to the participant details
  component, render it in the summary list
- Pass in a screening protocol to the component on the appointment show
  page

--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -56,6 +56,10 @@
   {{ card({
     "headingHtml": " ",
     "headingLevel": "2",
-    "descriptionHtml": participant_details(presented_participant=presented_participant, presented_mammograms=presented_mammograms, return_url=request.path)
+    "descriptionHtml": participant_details(
+      presented_participant=presented_participant,
+      return_url=request.path,
+      screening_protocol=presented_appointment.screening_protocol,
+    )
   }) }}
 {% endblock %}
