--- a/manage_breast_screening/participants/jinja2/components/participant-details/template.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/template.jinja
@@ -115,6 +115,14 @@
    },
    {
      "key": {
+       "text": "Screening protocol"
+     },
+     "value": {
+       "html": screening_protocol
+     }
+   } if screening_protocol else undefined,
+   {
+     "key": {
        "text": "Email"
      },
      "value": {
