--- a/manage_breast_screening/core/jinja2/django_form_helpers.jinja
+++ b/manage_breast_screening/core/jinja2/django_form_helpers.jinja
@@ -9,7 +9,7 @@
       {% set ns = namespace(errors=[]) %}
 
       {% for field in form %}
-        {% set ns.errors = ns.errors + [{"text": ",".join(field.errors), "href": "#" ~ field.auto_id}] %}
+        {% set ns.errors = ns.errors + [{"text": field.errors[0], "href": "#" ~ field.auto_id}] %}
       {% endfor %}
       {% for error_list in form.non_field_errors() %}
         {% set ns.errors = ns.errors + [{"text": ",".join(error_list)}] %}
