Fix missing param to participant details

--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -58,8 +58,9 @@
     "headingLevel": "2",
     "descriptionHtml": participant_details(
       presented_participant=presented_participant,
+      presented_mammograms=presented_mammograms,
       return_url=request.path,
-      screening_protocol=presented_appointment.screening_protocol,
+      screening_protocol=presented_appointment.screening_protocol
     )
   }) }}
 {% endblock %}
