fix: ensure return url is respected after form submission

--- a/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
+++ b/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
@@ -232,5 +232,7 @@
       }) }}
 
       {{csrf_input}}
+
+      <input type="hidden" name="return_url" value="{{ return_url }}"/>
   </form>
   {% endblock page_content %}
