--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -46,7 +46,7 @@
   {% for presented_appointment in presented_appointment_list.appointments %}
     {% set details_html %}
       <p class="nhsuk-u-margin-bottom-1">
-        <a href="{{ url('mammograms:start_screening', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
+        <a href="{{ url('mammograms:show_appointment', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
           {{ presented_appointment.participant.full_name }}
         </a>
       </p>
