feat: add view for special appointment details
This wires up the new form for providing special appointment
details. For now this is just the first step in the form. Later
I'll add the second step, shown when some of the reasons are
temporary.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -37,7 +37,7 @@
     {% else %}
       <p>{{ (presented_participant.extra_needs.values() | first).details }}</p>
     {% endif %}
-    <p><a href="#">Change</a></p>
+    <p><a href="{{ presented_appointment.special_appointment_url }}">Change</a></p>
   {% endset %}
 
   {% if presented_participant.extra_needs %}
