--- a/manage_breast_screening/core/jinja2/components/appointment-header/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-header/template.jinja
@@ -5,4 +5,8 @@
 
 <p>{{ clinic_slot.slot_time_and_clinic_date }}{% if not appointment.current_status.is_screened %}<span class="nhsuk-u-margin-left-3"><a href="#">Reschedule appointment</a></span>{% endif %}</p>
 
+{% if not appointment.extra_needs and not appointment.current_status.is_screened %}
+<p><a href="{{ appointment.special_appointment_url }}">Make special appointment</a></p>
+{% endif %}
+
 <p class="nhsuk-u-margin-bottom-4"><a href="{{ appointment.participant_url }}">View participant record</a></p>
