feat: add proper titles to each page
This follows the general pattern of
"{heading} - Manage breast screening - NHS"

Except sometimes the caption is used instead of the heading, to avoid
PII in page titles.

If an error is on the page, prefix with "Error: ".
This is done automatically in the base template, as long as the form object is named "form".

--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -17,7 +17,7 @@
 {% block page_content %}
   <h1 class="nhsuk-heading-l app-header">
       <span class="nhsuk-caption-l">{{ presented_clinic.setting_name }}</span>
-      {{ presented_clinic.risk_type }} screening clinic
+      {{ presented_clinic.heading }}
 
       <div class="app-header__status-tag">
         {{ tag({
