--- a/manage_breast_screening/core/jinja2/wizard_step.jinja
+++ b/manage_breast_screening/core/jinja2/wizard_step.jinja
@@ -25,7 +25,7 @@
     {% if caption %}
       <span class="nhsuk-caption-l">{{ caption }}</span>
     {% endif %}
-    {{title}}
+    {{ heading }}
   </h1>
   {% endblock heading %}
 
