--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -12,7 +12,7 @@
       <span class="nhsuk-caption-l">
         {{ caption }}
       </span>
-      {{ title }}
+      {{ heading }}
     </h1>
 
     <div class="app-header__status-tag">
