--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -7,7 +7,7 @@
   <script type="module" src="{{ static('js/bundle.js' )}}"></script>
 {% endblock %}
 
-{% block pageTitle %}{% if form and form.errors %}Error: {% endif %}{% if page_title %}{{page_title}} - {% endif %}Manage breast screening - NHS{% endblock %}
+{% block pageTitle %}{% if form and form.errors %}Error: {% endif %}{% if page_title %}{{page_title}} – {% endif %}Manage breast screening – NHS{% endblock %}
 
 {% block header %}
   {{ header({
