feat: change json structure for extra needs
extra_needs is now a dictionary where each reason maps
to a dictionary. I'm keeping it modelled as a json field for now
as this is likely to change again and we want to be able
to iterate quickly.

The design of this banner will be updated in a future commit to match
the latest prototype, with a summary list component.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -30,12 +30,12 @@
   {% set special_appointment_html %}
     {% if presented_participant.extra_needs | length > 1 %}
       <ul>
-        {% for need in presented_participant.extra_needs %}
-          <li>{{need}}</li>
+        {% for need in presented_participant.extra_needs.values() %}
+          <li>{{need.details}}</li>
         {% endfor %}
       </ul>
     {% else %}
-      <p>{{ presented_participant.extra_needs | first }}</p>
+      <p>{{ (presented_participant.extra_needs.values() | first).details }}</p>
     {% endif %}
     <p><a href="#">Change</a></p>
   {% endset %}
