Add custom template for SplitDateField
This continues the refactor to build a set of Field subclasses that are
easy to render in the template using
`{{ form.field_name.as_field_group() }}`

This will make it easier to reuse the split date component across
different forms.

--- a/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
+++ b/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
@@ -24,17 +24,13 @@
     </h1>
 
     <form action="{{ request.path }}" method="post">
-      {% set exact_date_html %}
-        {{ app_date_input(form_attribute=form.exact_date, legend="Date of mammogram", hint="For example, 15 3 2025") }}
-      {% endset %}
-
       {# Radios with conditionals #}
       {% do form.where_taken.add_conditional_html(form.WhereTaken.UK, form.somewhere_in_the_uk_details.as_field_group()) %}
       {% do form.where_taken.add_conditional_html(form.WhereTaken.OUTSIDE_UK, form.outside_the_uk_details.as_field_group()) %}
       {% do form.where_taken.add_divider_after(form.WhereTaken.OUTSIDE_UK, "or") %}
       {{ form.where_taken.as_field_group() }}
 
-      {% do form.when_taken.add_conditional_html(form.WhenTaken.EXACT, exact_date_html) %}
+      {% do form.when_taken.add_conditional_html(form.WhenTaken.EXACT, form.exact_date.as_field_group()) %}
       {% do form.when_taken.add_conditional_html(form.WhenTaken.APPROX, form.approx_date.as_field_group()) %}
       {{ form.when_taken.as_field_group() }}
 
