--- a/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
@@ -79,8 +79,7 @@
         "fieldset": {
           "legend": {
             "text": support_reasons_legend,
-            "classes": "nhsuk-fieldset__legend--m",
-            "isPageHeading": false
+            "classes": "nhsuk-fieldset__legend--m"
           }
         },
         "hint": {
